--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 </head>
 
 <body>
+  <header>
+    <h1>Blog Pessoal</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Sobre mim</a></li>
+        <li><a href="#">Meus projetos</a></li>
+        <li><a href="#">Contatos</a></li>
+      </ul>
+    </nav>
+    <h1>Sobre mim</h1>
+    <p>Meu nome é Leonardo, tenho 21 anos, e em Abril de 2023 eu ingressei no curso de Engenharia de Software pelo Instituto Infnet, referência em ensino tech no Brasil. <br> Deixo aqui o meu e-mail para contato: <strong>leonardo.camargo@al.infnet.edu.br</strong></p>
+  </header>
   
   <script src="script.js"></script>
 
